--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.13",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
