--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "react-loader-spinner": "^6.1.6",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
