--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_IMAGES_PATH=https://sky-match.vercel.app/
-NEXT_PUBLIC_API_URL=https://sky-match-api.onrender.com/api
+NEXT_PUBLIC_API_URL=https://sky-match-api-1.onrender.com/api
