--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_IMAGES_PATH=https://sky-match.vercel.app/
 NEXT_PUBLIC_API_URL=https://sky-match-api-1.onrender.com/api
+NODEMAILER_EMAIL=enriquesuarezmartin0@gmail.com
+NODEMAILER_PASSWORD=vuzb fswq cnqn qeuv
+NODEMAILER_DESTINY_EMAIL=enriquesuarezmartin@gmail.com
